--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Web designing</title>
 </head>
 <body>
-    
+    <main class='main'>
+        <section class='block_1'>
+            <div class='image'>
+
+            </div>
+            <div class='web_designing'>
+
+            </div>
+        </section>
+        <section class='block_2'>
+            <div class='drawing_scketch'>
+
+            </div>
+            <div class='second_half'>
+                <div class='best_strarting'>
+
+                </div>
+                <div class='verified_dummy'>
+
+                </div>
+            </div>
+        </section>
+        <section class='block_3'>
+            <div class='designed_by'>
+
+            </div>
+            <div class='say_hello'>
+
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
