add_texts_and_links

--- a/index.html
+++ b/index.html
@@ -11,34 +11,60 @@
     <main class='main'>
         <section class='block_1'>
             <div class='image'>
-
+                <img src="./image/photo1.png" alt="photo1">
             </div>
             <div class='web_designing'>
-
+                <img src="./image/icon.svg" alt="icon">
+                <h1>Ali Sayed’s <span>Web Designing</span> Project</h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+                <p>quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dol.</p>
             </div>
         </section>
         <section class='block_2'>
             <div class='drawing_scketch'>
-
+                <h1>Drawing <span>Scketch</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
+                <h1>Making <span>Design</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
+                <h1>Developing <span>Product</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
             </div>
             <div class='second_half'>
                 <div class='best_strarting'>
-
+                    <h1>Best <span>Strarting</span></h1>
+                    <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
+                    <a href="http://www.rosphoto.com/images/u/articles/1510/7_5.jpg">View Our History</a>
                 </div>
                 <div class='verified_dummy'>
-
+                    <h1>Verified <span>Dummy</span></h1>
+                    <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
+                    <a href="https://st2.depositphotos.com/1813545/7150/i/600/depositphotos_71506547-stock-photo-beautiful-ocean-surfing-wave.jpg">Go To The Page</a>
                 </div>
             </div>
         </section>
         <section class='block_3'>
             <div class='designed_by'>
-
+                <span>This Webpage Is <span>Designed By</span></span>
+                <img src="./image/logo.png" alt="logo">
+                <h1>Ali Sayed</h1>
+                <h5>Graphic Designer</h5>
             </div>
             <div class='say_hello'>
-
+                <h1>Say ‘Hello’</h1>
+                <div class='form'>
+                    <input type="text" required placeholder="Your Name">
+                    <input type="text" required placeholder="Your Email">
+                </div>
+                <input type="text" required placeholder="Your Message Here ...">
+                <span>Stay Connnected With Us...</span>
+                <div class='link'>
+                    <a href="https://uk-ua.facebook.com/"><img src="./image/logo_facebook.png" alt="facebook"></a>
+                    <a href="https://dribbble.com/"><img src="./image/logo_dribbble.png" alt="dribbble"></a>
+                    <a href="https://twitter.com/?lang=uk"><img src="./image/logo_twitter.png" alt="twitter"></a>
+                </div>
+                <span>Please Feel Free To Contat With me For Any Kind of Prject.</span>
             </div>
         </section>
-
     </main>
 </body>
 </html>
