--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Web designing</title>
 </head>
 <body>
@@ -15,28 +19,28 @@
             </div>
             <div class='web_designing'>
                 <img src="./image/icon.svg" alt="icon">
-                <h1>Ali Sayed’s <span>Web Designing</span> Project</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
-                <p>quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dol.</p>
+                <h1 class='black_text'>Ali Sayed’s <span class='bold_text'>Web Designing</span> <span class='text_project'>Project</span></h1>
+                <p class='text_in_block1'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+                <p class='text_in_block1'>quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dol.</p>
             </div>
         </section>
         <section class='block_2'>
             <div class='drawing_scketch'>
-                <h1>Drawing <span>Scketch</span></h1>
+                <h1 class='white_text'>Drawing <span class='bold_text'>Scketch</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
-                <h1>Making <span>Design</span></h1>
+                <h1 class='white_text'>Making <span class='bold_text'>Design</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
-                <h1>Developing <span>Product</span></h1>
+                <h1 class='white_text'>Developing <span class='bold_text'>Product</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
             </div>
             <div class='second_half'>
                 <div class='best_strarting'>
-                    <h1>Best <span>Strarting</span></h1>
+                    <h1 class='black_text'>Best <span class='bold_text'>Strarting</span></h1>
                     <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
                     <a href="http://www.rosphoto.com/images/u/articles/1510/7_5.jpg">View Our History</a>
                 </div>
                 <div class='verified_dummy'>
-                    <h1>Verified <span>Dummy</span></h1>
+                    <h1 class='white_text'>Verified <span class='bold_text'>Dummy</span></h1>
                     <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
                     <a href="https://st2.depositphotos.com/1813545/7150/i/600/depositphotos_71506547-stock-photo-beautiful-ocean-surfing-wave.jpg">Go To The Page</a>
                 </div>
@@ -44,13 +48,13 @@
         </section>
         <section class='block_3'>
             <div class='designed_by'>
-                <span>This Webpage Is <span>Designed By</span></span>
+                <h1 class='white_text'>This Webpage Is <span class='bold_text'>Designed By</span></h1>
                 <img src="./image/logo.png" alt="logo">
                 <h1>Ali Sayed</h1>
                 <h5>Graphic Designer</h5>
             </div>
             <div class='say_hello'>
-                <h1>Say ‘Hello’</h1>
+                <h1 class='white_text'>Say <span class='bold_text'>Hello’</span></h1>
                 <div class='form'>
                     <input type="text" required placeholder="Your Name">
                     <input type="text" required placeholder="Your Email">
