add_styles_for_block2

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <section class='block_2'>
             <div class='drawing_scketch'>
                 <h1 class='white_text'>Drawing <span class='bold_text'>Scketch</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
+                <p class='white_text'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
                 <h1 class='white_text'>Making <span class='bold_text'>Design</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
+                <p class='white_text'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
                 <h1 class='white_text'>Developing <span class='bold_text'>Product</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
+                <p class='white_text'>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidu.</p>
             </div>
             <div class='second_half'>
                 <div class='best_strarting'>
                     <h1 class='black_text'>Best <span class='bold_text'>Strarting</span></h1>
                     <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
-                    <a href="http://www.rosphoto.com/images/u/articles/1510/7_5.jpg">View Our History</a>
+                    <a class='link_1' href="http://www.rosphoto.com/images/u/articles/1510/7_5.jpg">View Our History</a>
                 </div>
                 <div class='verified_dummy'>
                     <h1 class='white_text'>Verified <span class='bold_text'>Dummy</span></h1>
-                    <p>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
-                    <a href="https://st2.depositphotos.com/1813545/7150/i/600/depositphotos_71506547-stock-photo-beautiful-ocean-surfing-wave.jpg">Go To The Page</a>
+                    <p class='white_text'>Lorem ipsum dolor sit amet, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea.</p>
+                    <a class='link_2' href="https://st2.depositphotos.com/1813545/7150/i/600/depositphotos_71506547-stock-photo-beautiful-ocean-surfing-wave.jpg">Go To The Page</a>
                 </div>
             </div>
         </section>
