add_styles_for_block3

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
         <section class='block_3'>
             <div class='designed_by'>
                 <h1 class='white_text'>This Webpage Is <span class='bold_text'>Designed By</span></h1>
-                <img src="./image/logo.png" alt="logo">
-                <h1>Ali Sayed</h1>
-                <h5>Graphic Designer</h5>
+                <img class='logo' src="./image/logo.png" alt="logo">
+                <h1 class='ali_sayed'>Ali Sayed</h1>
+                <h5 class='white_text'>Graphic Designer</h5>
             </div>
             <div class='say_hello'>
                 <h1 class='white_text'>Say <span class='bold_text'>Hello’</span></h1>
                 <div class='form'>
-                    <input type="text" required placeholder="Your Name">
-                    <input type="text" required placeholder="Your Email">
+                    <input class='first_and_second_form' type="text" required placeholder="Your Name">
+                    <input class='first_and_second_form' type="text" required placeholder="Your Email">
                 </div>
-                <input type="text" required placeholder="Your Message Here ...">
-                <span>Stay Connnected With Us...</span>
+                <input class='third_form' type="text" required placeholder="Your Message Here ...">
+                <p class='white_text'>Stay Connnected With Us...</p>
                 <div class='link'>
                     <a href="https://uk-ua.facebook.com/"><img src="./image/logo_facebook.png" alt="facebook"></a>
                     <a href="https://dribbble.com/"><img src="./image/logo_dribbble.png" alt="dribbble"></a>
                     <a href="https://twitter.com/?lang=uk"><img src="./image/logo_twitter.png" alt="twitter"></a>
                 </div>
-                <span>Please Feel Free To Contat With me For Any Kind of Prject.</span>
+                <p class='white_text'>Please Feel Free To Contat With me For Any Kind of Prject.</p>
             </div>
         </section>
     </main>
