editing_and_testing_project

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                 <h5 class='white_text'>Graphic Designer</h5>
             </div>
             <div class='say_hello'>
-                <h1 class='white_text'>Say <span class='bold_text'>Hello’</span></h1>
+                <h1 class='white_text'>Say <span class='bold_text'>‘Hello’</span></h1>
                 <div class='form'>
-                    <input class='first_and_second_form' type="text" required placeholder="Your Name">
-                    <input class='first_and_second_form' type="text" required placeholder="Your Email">
+                    <input type="text" required placeholder="Your Name">
+                    <input type="text" required placeholder="Your Email">
                 </div>
-                <input class='third_form' type="text" required placeholder="Your Message Here ...">
+                <textarea name="text" cols="30" rows="10" placeholder="Your Message Here ..."></textarea>
                 <p class='white_text'>Stay Connnected With Us...</p>
                 <div class='link'>
-                    <a href="https://uk-ua.facebook.com/"><img src="./image/logo_facebook.png" alt="facebook"></a>
-                    <a href="https://dribbble.com/"><img src="./image/logo_dribbble.png" alt="dribbble"></a>
-                    <a href="https://twitter.com/?lang=uk"><img src="./image/logo_twitter.png" alt="twitter"></a>
+                    <a class='logo_facebook' href="http://www.facebook.com/"><img src="./image/Facebook.svg" alt="facebook"></a>
+                    <a class='logo_dribbble' href="https://dribbble.com/"><img src="./image/Dribbble.svg" alt="dribbble"></a>                   
+                    <a class='logo_twitter' href="http://twitter.com/?lang=uk"><img src="./image/Twitter.svg" alt="twitter"></a>
                 </div>
                 <p class='white_text'>Please Feel Free To Contat With me For Any Kind of Prject.</p>
             </div>
