add_colors_and_test_project

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             </div>
             <div class='say_hello'>
                 <h1 class='white_text'>Say <span class='bold_text'>‘Hello’</span></h1>
-                <div class='form'>
+                <form class='form' action="#" method="get">
                     <input type="text" required placeholder="Your Name">
                     <input type="text" required placeholder="Your Email">
-                </div>
-                <textarea name="text" cols="30" rows="10" placeholder="Your Message Here ..."></textarea>
+                    <textarea name="text" cols="30" rows="10" placeholder="Your Message Here ..."></textarea>
+                </form>
                 <p class='white_text'>Stay Connnected With Us...</p>
                 <div class='link'>
                     <a class='logo_facebook' href="http://www.facebook.com/"><img src="./image/Facebook.svg" alt="facebook"></a>
